--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <ul class="breadcrumb">
+          <ul class="breadcrumb bg-faded">
             <li class="breadcrumb-item"> <a href="#">Home</a> </li>
             <li class="breadcrumb-item active">Link</li>
           </ul>
@@ -19,10 +19,10 @@
       </div>
     </div>
   </div>
-  <div class="py-5">
+  <div class="py-5 bg-danger">
     <div class="container">
       <div class="row">
-        <div class="col-md-12"></div>
+        <div class="col-md-12 bg-success"></div>
       </div>
       <div class="row">
         <div class="col-md-12">
